# cmake-library-example

./: CMakeLists.txt  build-foo.sh  license.txt  main.cpp  readme.md
.github/workflows/: build.yml
foo-component/: CMakeLists.txt  foo.cpp
foo-component/include/: foo.hpp
foo-component/lib/: .gitignore  library.md
